--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
       <div class="container">
         <div class="row">
           <h1>Theary Im</h1>
-          <p>My name is Theary and I am currently a student at <a href="www.epicodus.com">Epicodus</a>. The first week goes by really <strong>FAST!</strong> I am amazed of how much information we've covered. I am feeling pretty good about Command Line and Git but still need more practice on the concept of Branching and Merging.
+          <p>My name is Theary and I am currently a student at <a href="https://www.epicodus.com/">Epicodus</a>. The first week goes by really <strong>FAST!</strong> I am amazed of how much information we've covered. I am feeling pretty good about Command Line and Git but still need more practice on the concept of Branching and Merging.
           </p>
         </div>
         <div>
@@ -54,7 +54,7 @@
           On a daily basis, the ability to employ consistent and efficient method of informing customer, supporting my team and providing direction is critical to our success as whole. I greatly enjoy the challenges, the quick pace and making lasting, effective contribution to the community. My believe for goal-driven and data driven approach has contributed to our team success at <a href="https://www.mednax.com/practice/obstetrix-medical-group-issaquah/">Obsterix Medical Group</a>, where we increase our patient satifaction by 30% and our revenue by 18% (accroding to our Cognos Report) in the last 12 months.
         </p>
         <p>
-          I believe in personal growth especially growth mindset. I believe that what I learn from <a href="www.epicodus.com">Epicodus</a> will allow me to expand upon these abilities.
+          I believe in personal growth especially growth mindset. I believe that what I learn from <a href="https://www.epicodus.com/">Epicodus</a> will allow me to expand upon these abilities.
         </p>
     </div>
     <div class="sidebar">
