--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
       <div class="container">
         <div class="row">
           <h1>Theary Im</h1>
-          <p>My name is Theary and I am currently a student at <a href="https://www.epicodus.com/">Epicodus</a>. The first week goes by really <strong>FAST!</strong> I am amazed of how much information we've covered. I am feeling pretty good about Command Line and Git but still need more practice on the concept of Branching and Merging.
+          <p>My name is Theary and I am currently a student at <a href="https://www.epicodus.com/">Epicodus</a>. The first week goes by really <strong>FAST!</strong> I am amazed at how much information we've covered. I am feeling pretty good about the Command-Line and Git but still need more practice with the concepts of branching and merging.
           </p>
         </div>
         <div>
@@ -48,15 +48,16 @@
     <div class="text">
       <h4>My background</h4>
         <p>
-          Over the past eight years, I have been in customer and clinical services as well as management. My work responsibilites envelop me in a diverse cultural and multidiscipline environment requiring precision, organization and a broad range of communication abilities with the team.
+          Over the past eight years, I have worked in customer and clinical services role as well as management. My work responsibilites enveloped me in a diverse cultural and multi-discipline team environment requiring precision, organization and a broad range of communication abilities.
         </p>
         <p>
-          On a daily basis, the ability to employ consistent and efficient method of informing customer, supporting my team and providing direction is critical to our success as whole. I greatly enjoy the challenges, the quick pace and making lasting, effective contribution to the community. My believe for goal-driven and data driven approach has contributed to our team success at <a href="https://www.mednax.com/practice/obstetrix-medical-group-issaquah/">Obsterix Medical Group</a>, where we increase our patient satifaction by 30% and our revenue by 18% (accroding to our Cognos Report) in the last 12 months.
+          On a daily basis, the ability to employ consistent and efficient methods of informing customers, supporting my team and making decisions for the business were ctritical aspects for success. I greatly enjoyed the challenges, the quick pace and making a lasting, contribution to the community. My unique goal and data-driven approach empowered our team to new levels of success at <a href="https://www.mednax.com/practice/obstetrix-medical-group-issaquah/">Obsterix Medical Group</a>, increasing patient satifaction by 30% and our revenue by 18% in the last 12 periods.
         </p>
         <p>
-          I believe in personal growth especially growth mindset. I believe that what I learn from <a href="https://www.epicodus.com/">Epicodus</a> will allow me to expand upon these abilities.
+          I believe that personal growth begins with a growth mindset. I am here at <a href="https://www.epicodus.com/">Epicodus</a> with the goal of expanding my caree options. I believe that what I learn here at <a href="https://www.epicodus.com/">Epicodus</a> will allow me to open new doors to opportunity enabling me to successfully transition into my next journey in life.
         </p>
     </div>
+
     <div class="sidebar">
       <h4>More about me..</h4>
         <p>In my free time I enjoy:
