use container to organize page presentation better

--- a/index.html
+++ b/index.html
@@ -6,69 +6,77 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
-      <div class="container">
-        <div class="row">
-          <h1>Theary Im</h1>
-          <p>My name is Theary and I am currently a student at <a href="https://www.epicodus.com/">Epicodus</a>. The first week goes by really <strong>FAST!</strong> I am amazed at how much information we've covered. I am feeling pretty good about the Command-Line and Git but still need more practice with the concepts of branching and merging.
-          </p>
-        </div>
-        <div>
-          <p>Here is a <a href="https://github.com/Thearyim">link </a>to projects my partner and I created this week with <em>a brief description of the project and what languages we used.</em>
-          </p>
-            <ul>
-              <li>Monday - <a href="https://github.com/Thearyim/my-first-webpage">My First Webpage </a></li>
-                <ol>
-                  <li>HTML</li>
-                  <li>Practice Block Elements and Inline Elements</li>
-                </ol>
-              <li>Tuesday - <a href="https://github.com/Thearyim/private-island-resort">Private Island Resort</a></li>
-                <ol>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>Practie Branching and Merging</li>
-                </ol>
-              <li>Wednesday - <a href="https://github.com/Thearyim/animal-shelter">Animal Shelter</a></li>
-                <ol>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>Practie Divs and Spans, Float, Box Model, Casding, Media Queries and Responsive Design</li>
-                </ol>
-              <li>Thursday - <a href="https://github.com/Thearyim/vacation">Vacation</a></li>
-                <ol>
-                  <li>HTML</li>
-                  <li>Bootstrap and CSS</li>
-                  <li>Practice Grid System and Custom Styles</li>
-                </ol>
-            </ul>
-        </div>
+    <div class="container">
+      <div class="row">
+          <div class="col-md-9">
+              <h1>Theary Im</h1>
+              <p>My name is Theary and I am currently a student at <a href="https://www.epicodus.com/">Epicodus</a>. The first week goes by really <strong>FAST!</strong> I am amazed at how much information we've covered. I am feeling pretty good about the Command-Line and Git but still need more practice with the concepts of branching and merging.
+              </p>
+            <div>
+              <p>Here is a <a href="https://github.com/Thearyim">link </a>to projects my partner and I created this week with <em>a brief description of the project and what languages we used.</em>
+              </p>
+                <ul>
+                  <li>Monday - <a href="https://github.com/Thearyim/my-first-webpage">My First Webpage </a></li>
+                    <ol>
+                      <li>HTML</li>
+                      <li>Practice Block Elements and Inline Elements</li>
+                    </ol>
+                  <li>Tuesday - <a href="https://github.com/Thearyim/private-island-resort">Private Island Resort</a></li>
+                    <ol>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>Practie Branching and Merging</li>
+                    </ol>
+                  <li>Wednesday - <a href="https://github.com/Thearyim/animal-shelter">Animal Shelter</a></li>
+                    <ol>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>Practie Divs and Spans, Float, Box Model, Casding, Media Queries and Responsive Design</li>
+                    </ol>
+                  <li>Thursday - <a href="https://github.com/Thearyim/vacation">Vacation</a></li>
+                    <ol>
+                      <li>HTML</li>
+                      <li>Bootstrap and CSS</li>
+                      <li>Practice Grid System and Custom Styles</li>
+                    </ol>
+                </ul>
+            </div>
+          </div>
       </div>
     </div>
-    <h3>A little bit about me</h3>
-    <img src="img/theary.jpg" alt="A photo of Theary." style="width: 120px">
-    <div class="text">
-      <h4>My background</h4>
-        <p>
-          Over the past eight years, I have worked in customer and clinical services role as well as management. My work responsibilites enveloped me in a diverse cultural and multi-discipline team environment requiring precision, organization and a broad range of communication abilities.
-        </p>
-        <p>
-          On a daily basis, the ability to employ consistent and efficient methods of informing customers, supporting my team and making decisions for the business were ctritical aspects for success. I greatly enjoyed the challenges, the quick pace and making a lasting, contribution to the community. My unique goal and data-driven approach empowered our team to new levels of success at <a href="https://www.mednax.com/practice/obstetrix-medical-group-issaquah/">Obsterix Medical Group</a>, increasing patient satifaction by 30% and our revenue by 18% in the last 12 periods.
-        </p>
-        <p>
-          I believe that personal growth begins with a growth mindset. I am here at <a href="https://www.epicodus.com/">Epicodus</a> with the goal of expanding my caree options. I believe that what I learn here at <a href="https://www.epicodus.com/">Epicodus</a> will allow me to open new doors to opportunity enabling me to successfully transition into my next journey in life.
-        </p>
-    </div>
-
-    <div class="sidebar">
-      <h4>More about me..</h4>
-        <p>In my free time I enjoy:
-          <ul>
-              <li>Volleyball</li>
-              <li>Hiking</li>
-              <li>Backpacking</li>
-              <li>Reading with husband and my daughter</li>
-          </ul>
-        </p>
-        <p class="additional">More questions? Reach me at this <a href="mailto:thearim@gmail.com">email</a>.</p>
+    <div class="container">
+        <div class="row">
+          <div class="col-md-9">
+            <h3>A little bit about me</h3>
+            <img src="img/theary.jpg" alt="A photo of Theary." style="width: 120px" />
+            <div class="text">
+              <h4>My background</h4>
+                <p>
+                  Over the past eight years, I have worked in customer and clinical services role as well as management. My work responsibilites enveloped me in a diverse cultural and multi-discipline team environment requiring precision, organization and a broad range of communication abilities.
+                </p>
+                <p>
+                  On a daily basis, the ability to employ consistent and efficient methods of informing customers, supporting my team and making decisions for the business were ctritical aspects for success. I greatly enjoyed the challenges, the quick pace and making a lasting, contribution to the community. My unique goal and data-driven approach empowered our team to new levels of success at <a href="https://www.mednax.com/practice/obstetrix-medical-group-issaquah/">Obsterix Medical Group</a>, increasing patient satifaction by 30% and our revenue by 18% in the last 12 periods.
+                </p>
+                <p>
+                  I believe that personal growth begins with a growth mindset. I am here at <a href="https://www.epicodus.com/">Epicodus</a> with the goal of expanding my caree options. I believe that what I learn here at <a href="https://www.epicodus.com/">Epicodus</a> will allow me to open new doors to opportunity enabling me to successfully transition into my next journey in life.
+                </p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="sidebar" style="padding-top:25px">
+              <h4>More about me..</h4>
+                <p>In my free time I enjoy:
+                  <ul>
+                      <li>Volleyball</li>
+                      <li>Hiking</li>
+                      <li>Backpacking</li>
+                      <li>Reading with husband and my daughter</li>
+                  </ul>
+                </p>
+                <p class="additional">More questions? Reach me at this <a href="mailto:thearim@gmail.com">email</a>.</p>
+            </div>
+          </div>
+        </div>
     </div>
   </body>
 </html>
