improve portfolio webpage to include borders and span tag

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <div class="container">
       <div class="row">
-          <div class="col-md-9">
+          <div class="col-md-9 standout">
               <h1>Theary Im</h1>
-              <p>My name is Theary and I am currently a student at <a href="https://www.epicodus.com/">Epicodus</a>. The first week goes by really <strong>FAST!</strong> I am amazed at how much information we've covered. I am feeling pretty good about the Command-Line and Git but still need more practice with the concepts of branching and merging.
+              <p>My name is <span class="me">Theary</span> and I am currently a student at <a href="https://www.epicodus.com/">Epicodus</a>. The first week goes by really <strong>FAST!</strong> I am amazed at how much information we've covered. I am feeling pretty good about the Command-Line and Git but still need more practice with the concepts of branching and merging.
               </p>
             <div>
               <p>Here is a <a href="https://github.com/Thearyim">link </a>to projects my partner and I created this week with <em>a brief description of the project and what languages we used.</em>
@@ -46,7 +46,7 @@
     </div>
     <div class="container">
         <div class="row">
-          <div class="col-md-9">
+          <div class="col-md-9 standout">
             <h3>A little bit about me</h3>
             <img src="img/theary.jpg" alt="A photo of Theary." style="width: 120px" />
             <div class="text">
@@ -62,8 +62,8 @@
                 </p>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="sidebar" style="padding-top:25px">
+          <div class="col-md-3 standout sidebar">
+            <div style="padding-top:25px">
               <h4>More about me..</h4>
                 <p>In my free time I enjoy:
                   <ul>
