Update index.html to include github and linkedin.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <div class="row">
           <div class="col-md-9 standout">
               <h1>Theary Im</h1>
-              <p>My name is <span class="me">Theary</span> and I am currently a student at <a href="https://www.epicodus.com/">Epicodus</a>. The first week goes by really <strong>FAST!</strong> I am amazed at how much information we've covered. I am feeling pretty good about the Command-Line and Git but still need more practice with the concepts of branching and merging.
+              <p>My name is <span class="me">Theary</span> and I am currently a student at <a href="https://www.epicodus.com/">Epicodus</a>. Click <a href="https://github.com/Thearyim">here</a> to checkout my projects.
               </p>
             <div>
-              <p>Here is a <a href="https://github.com/Thearyim">link </a>to projects my partner and I created this week with <em>a brief description of the project and what languages we used.</em>
+              <p>Checkout my <a href="https://www.linkedin.com/in/theary-im-040371133/">linkedin </a>to findout more about my professional experience and accomplishments.
               </p>
                 <ul>
                   <li>Monday - <a href="https://github.com/Thearyim/my-first-webpage">My First Webpage </a></li>
@@ -52,7 +52,7 @@
             <div class="text">
               <h4>My background</h4>
                 <p>
-                  Over the past eight years, I have worked in customer and clinical services role as well as management. My work responsibilites enveloped me in a diverse cultural and multi-discipline team environment requiring precision, organization and a broad range of communication abilities.
+                  Over the past eight years, I have worked in customer and clinical services role as well as management. My work responsibilities enveloped me in a diverse cultural and multi-discipline team environment requiring precision, organization and a broad range of communication abilities.
                 </p>
                 <p>
                   On a daily basis, the ability to employ consistent and efficient methods of informing customers, supporting my team and making decisions for the business were ctritical aspects for success. I greatly enjoyed the challenges, the quick pace and making a lasting, contribution to the community. My unique goal and data-driven approach empowered our team to new levels of success at <a href="https://www.mednax.com/practice/obstetrix-medical-group-issaquah/">Obsterix Medical Group</a>, increasing patient satifaction by 30% and our revenue by 18% in the last 12 periods.
